@@ -238,6 +238,7 @@ topic.category.numtopics=Der er {0} emner i kategorien &quot;{1}&quot;
 topic.category.subcategories=Underkategorier til kategori &quot;{0}&quot;
 topic.category.topics=Emner i kategori &quot;{0}&quot;
 topic.filehistory=Fil Historik
+topic.file.download=View/Download this file
 topic.ismentionedon=er n\u00E6vnt p\u00E5\:
 topic.notcreated=Emnet "{0}" eksistere ikke; det kan oprettes ved at klikke p\u00E5 "rediger" fanebladet ovenfor.
 topic.redirect.from=Redirigeret fra {0}
