@@ -239,6 +239,7 @@ topic.category.numtopics=There are {0} topics in category &quot;{1}&quot;
 topic.category.subcategories=Sub-categories for category &quot;{0}&quot;
 topic.category.topics=Topics in category &quot;{0}&quot;
 topic.filehistory=\u6587\u4ef6\u6b77\u53f2
+topic.file.download=View/Download this file
 topic.ismentionedon=\u88ab\u63d0\u53ca\u7684\u5730\u65b9\uff1a
 topic.notcreated=\u73fe\u5728\u9084\u4e0d\u5b58\u5728\u4e3b\u984c\u300c{0}\u300d\uff1b\u53ef\u4ee5\u901a\u904e\u9ede\u64ca\u4e0a\u9762\u7684\u300c\u7de8\u8f2f\u300d\u6309\u9215\u4f86\u5275\u5efa\u3002
 topic.redirect.from=Redirected from {0}
